--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.4.0",
     "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "colors": "^1.4.0",
+    "give-me-a-joke": "^0.5.1"
   }
 }
