--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ejs": "^3.1.10",
     "express": "^5.2.1",
     "figlet": "^1.9.4",
-    "give-me-a-joke": "^0.5.1"
+    "give-me-a-joke": "^0.5.1",
+    "uuid": "^13.0.0"
   },
   "name": "learnweb",
   "version": "1.0.0",
