--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.2.1",
     "figlet": "^1.9.4",
     "give-me-a-joke": "^0.5.1",
+    "method-override": "^3.0.0",
     "uuid": "^13.0.0"
   },
   "name": "learnweb",
