--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "figlet": "^1.9.4",
     "give-me-a-joke": "^0.5.1",
     "method-override": "^3.0.0",
+    "mongoose": "^9.1.3",
     "uuid": "^13.0.0"
   },
   "name": "learnweb",
